Add a non-functional idle button to layout

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<button id="idleButton" onclick="alert('Idle')" >Idle</button>
+
 <ul id="tabnav">
   <li class="tab1"><a href="javascript:showCorral()">Tab Corral</a></li>
   <li class="tab2"><a href="javascript:showActive()">Tab Lock</a></li>
