Add idle functionality
idle.js
* Create idle.js that has button-toggling functionality for the popup

background.js
* Modify refreshOptions() to load IS_IDLE state.
* refreshOptions() also calls resetTabs() if the idle state has changed
  from idling to active. Possibly not the right place to do this, but
  certainly the simplest.
* Add resetTabs() to simply reset the last-updated timestamp on all
  the tabs at once.
* Modify checkToClose() with a short-circuit check to exit the function
  early if idling. Double check this isn't happening too early in the
  function.

options.js
* Add load_idle_state() function to load the current idle setting
* Refactor load_minutes_inactive() out of restore_options()

popup.css
* Add rudimentary toggle class for the Idle button

popup.html
* Include idle.js and add function call to idleButton element

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
 
 <script type="text/javascript" src="time_since.js"></script>
 <script type="text/javascript" src="options.js"></script>
+<script type="text/javascript" src="idle.js"></script>
 <script type="text/javascript" src="tw_shared.js"></script>
 
 <script type="text/javascript" src="popup-lock.js"></script>
@@ -13,7 +14,7 @@
 
 <body>
 
-<button id="idleButton" onclick="alert('Idle')" >Idle</button>
+<button id="idleButton" onclick="toggle_idle()" >Idle</button>
 
 <ul id="tabnav">
   <li class="tab1"><a href="javascript:showCorral()">Tab Corral</a></li>
